--- a/loginForm.html
+++ b/loginForm.html
@@ -1,31 +1,55 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>로그인</title>
 </head>
 
 <body>
 <center>
 
+	<!-- form 태그: 입력 양식을 단일화시켜 하나로 묶는 태그 -->
+	<form action = "boardList.html">
+
 	<br><br><br>
-	[로그인] <br>
+	<br>
 
-	<a href="javascript:if(confirm('점심뭐먹지')){alert('햄버거');}else{alert('삼겹살.. 냠냠');}">눌러</a>
+	<table border = 0 cellpadding = 5> <!-- 책장 만드는 태그 -->
+		
+	<!-- 로그인 텍스트 -->
+	<tr><th>[로그인]</th></tr> <!-- th는 기본이 가운데 정렬 / board -->
 
-	<!-- block 형식 태그 -->
-	<table border = 1 style ="border-collapse:collapse" cellpadding = 5 bordercolor = "lightgray"> 
-		<tr>
-			<td align="right" bgcolor = "#E9E9E9">아이디</td>
-			<td><input type = "text" name = "uid"> </td>
-		</tr>
-		<tr>
-			<td align="right" bgcolor = "#E9E9E9">암 호</td>
-			<td><input type = "password" name = "pwd"> </td>
-		</tr>
+	<!-- 인풋  -->
+	<tr><td align = center>  
+		<!-- td는 기본이 왼쪽 정렬 / align = center로 가운데 정렬  -->
+		
+		<!-- block 형식 태그 -->
+		<table border = 1 style ="border-collapse:collapse" cellpadding = 5 bordercolor = "lightgray"> 
+			<tr> <!-- 행 -->
+				<td align="right" bgcolor = "#E9E9E9">아이디</td>  <!-- 셀 -->
+				<td><input type = "text" name = "uid" size = 10></td>
+			</tr>
+			<tr>
+				<td align="right" bgcolor = "#E9E9E9">암 호</td>
+				<td><input type = "password" name = "pwd" size = 10></td>
+			</tr>
+		</table>
+
+	</td></tr>
+	
+	<!-- 로그인 버튼 -->
+	<tr><td align = center>
+		<!-- inline 형식 태그 -->
+		<input type = "submit" value = "로그인"> 
+		<!-- submit은 선택 시 form 태그의 action url로 던진다 -->
+		<!-- value는 화면에 나가는 텍스트 -->
+		<input type = "reset" value = "초기화"> 
+		<!-- reset은 선택 시 form 태그의 인풋 값을 초기화 시킨다 -->
+	</td></tr>
+
 	</table>
 
-	<!-- inline 형식 태그 -->
-	<input type = "button" value = "로그인">
+	</form>
+	<!-- /form -->
 
 </center>
 </body>
